# mix

./: .gitignore  .wrapr  Cargo.toml  bump.ps1  example.html  example.md  goal.md  readme.md  style.css
draw/: Cargo.toml
draw/src/: color.rs  cx_2d.rs  draw_list_2d.rs  layout.rs  lib.rs  quad.rs  rect.rs  shader.rs  text.rs  turtle.rs
examples/counter/: Cargo.toml
examples/counter/src/: main.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
platform/: Cargo.toml
platform/src/: area.rs  cx.rs  debug.rs  draw_list.rs  event.rs  geometry.rs  gpu_info.rs  lib.rs  math.rs  pass.rs  performance_stats.rs  shader.rs  texture.rs  window.rs
platform/src/os/: mod.rs  windows.rs
src/: lib.rs  main.rs
src/draw/: color.rs  cx_2d.rs  draw_list_2d.rs  layout.rs  lib.rs  mod.rs  quad.rs  rect.rs  shader.rs  text.rs  turtle.rs
src/platform/: area.rs  cx.rs  debug.rs  draw_list.rs  event.rs  geometry.rs  gpu_info.rs  lib.rs  math.rs  mod.rs  pass.rs  performance_stats.rs  shader.rs  texture.rs  window.rs
src/platform/os/: mod.rs  windows.rs
src/widgets/: app.rs  button.rs  label.rs  mod.rs  theme.rs  view.rs  widget.rs  window.rs
widgets/: Cargo.toml
widgets/src/: app.rs  button.rs  label.rs  lib.rs  theme.rs  view.rs  widget.rs  window.rs
