[package]
name = "mix"
version = "0.1.2"
edition = "2021"
authors = ["incredimo <a@xo.rs>"]
description = "mix is a simple html templating engine for rust"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 
minimo = "0.5.42"

