[package]
name = "mix"
version = "0.1.3"
edition = "2021"
authors = ["incredimo <a@xo.rs>"]
description = "mix is a simple html templating engine for rust"
license = "MIT"




[dependencies]
# yes! absolutely no dependencies
# no thiserror no serde no anyhow no tokio no async no futures no std::any
# 😯 i must be doing something wrong!


