[package]
name = "mix"
version = "0.2.1"
edition = "2021"
description = "mix - a rust ui library cooked up in half a day! (expect extra salt)"
authors = ["incredimo <a@xo.rs>"]
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "examples/hello_world",
    "examples/counter",
]

resolver = "2"

[dependencies]
smallvec = "1.11.2"
bitflags = "2"
ttf-parser = "0.25.1"
ab_glyph_rasterizer = "0.1.8"
unicode-segmentation = "1.11.0"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.56"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_HiDpi",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_DataExchange",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D_Fxc",
]

[target.'cfg(windows)'.dependencies.windows-targets]
version = "0.48.3"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev.package."*"]
opt-level = 3

